--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
@@ -4,20 +4,42 @@
             <div class="offset-1 col-8 align-self-center">
                 <div class="row  kt-margin-t-30">
                     <div class="col-4 form-label">
-                        <label for="" class="text-color">Gold Gross Weight</label>
+                        <label for="" class="mandatory text-color">Gold Gross Weight</label>
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="grossWeight"
                             placeholder="10.50 grams">
+                        <mat-error *ngIf="controls.grossWeight.errors?.required && controls.grossWeight.invalid">
+                            Required Field
+                        </mat-error>
+                        <mat-error *ngIf="controls.grossWeight.errors?.min && controls.grossWeight.invalid">
+                            Required Field
+                        </mat-error>
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
                     <div class="col-4 form-label">
-                        <label for="" class="mandatory text-color">Gold-Net Weight</label>
+                        <label for="" class="mandatory text-color">Gold Net Weight</label>
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="netWeight" placeholder="8.50 grams"
                             [class.isError]="controls.netWeight.touched && controls.netWeight.invalid">
+                        <mat-error *ngIf="controls.grossWeight.errors?.required && controls.grossWeight.invalid">
+                            Required Field
+                        </mat-error>
+                        <mat-error *ngIf="controls.grossWeight.errors?.max && controls.grossWeight.invalid">
+                            Required Field
+                        </mat-error>
+                    </div>
+                </div>
+                <div class="row kt-margin-t-10">
+                    <div class="col-4 form-label">
+                        <label for="" class=" text-color">Deduction Weight</label>
+                    </div>
+                    <div class="col-6">
+                        <input type="number" class="form-control" formControlName="deductionWeight"
+                            placeholder="2.00 grams"
+                            [class.isError]="controls.deductionWeight.touched && controls.deductionWeight.invalid">
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
@@ -26,7 +48,8 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="currentLTV" placeholder="45000"
-                            [class.isError]="controls.currentLTV.touched && controls.currentLTV.invalid">
+                            [class.isError]="controls.currentLTV.touched && controls.currentLTV.invalid" readonly>
+                        <mat-hint><small>75% of current gold rate</small></mat-hint>
                     </div>
                 </div>
                 <div class="row kt-margin-t-30">
