--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -13,6 +13,22 @@
         <mat-tab-group #tabGroup>
             <mat-tab label="By Filling From">
                 <form [formGroup]="fillingForm">
+                    <div class="row kt-margin-t-15 kt-margin-b-15">
+                        <div class="col-3">
+                            <p class="text-color font-weight-bold mandatory">Select Partner Name</p>
+                        </div>
+                        <div class="col-9">
+                            <select name="" id="" class="form-control" formControlName="partnerId"
+                                [class.isError]="fillingForm.get('partnerId').touched && fillingForm.get('partnerId').invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Partner</option>
+                                <option [value]="partner.id" *ngFor="let partner of partnerData">
+                                    {{partner.name | titlecase}}
+                                </option>
+                            </select>
+
+                        </div>
+                    </div>
+
                     <div class="row kt-margin-b-15">
                         <div class="col-3">
                             <p class="text-color font-weight-bold mandatory"> Scheme Name</p>
@@ -34,9 +50,9 @@
                                     <input type="number" class="form-control" formControlName="schemeAmountStart"
                                         [class.isError]="fillingForm.get('schemeAmountStart').touched && fillingForm.get('schemeAmountStart').invalid"
                                         placeholder="From e.g. 1 or 1.5" (blur)="fromAndToValidation()">
-                                        <mat-error *ngIf="fillingForm.get('schemeAmountStart').errors?.amt">
-                                            <small>From Should be less than To Amt</small>
-                                        </mat-error>
+                                    <mat-error *ngIf="fillingForm.get('schemeAmountStart').errors?.amt">
+                                        <small>From Should be less than To Amt</small>
+                                    </mat-error>
                                 </div>
                                 <div class="col-6 amount">
                                     <input type="number" class="form-control" formControlName="schemeAmountEnd"
@@ -110,21 +126,7 @@
                                 [class.isError]="fillingForm.get('interestRateOneHundredEightyDaysAnnually').touched && fillingForm.get('interestRateOneHundredEightyDaysAnnually').invalid">
                         </div>
                     </div> -->
-                    <div class="row kt-margin-t-20">
-                        <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory">Select Partner Name</p>
-                        </div>
-                        <div class="col-9">
-                            <select name="" id="" class="form-control" formControlName="partnerId"
-                                [class.isError]="fillingForm.get('partnerId').touched && fillingForm.get('partnerId').invalid">
-                                <option value="" [selected]="true" [disabled]="true">Select Partner</option>
-                                <option [value]="partner.id" *ngFor="let partner of partnerData">
-                                    {{partner.name | titlecase}}
-                                </option>
-                            </select>
 
-                        </div>
-                    </div>
                 </form>
             </mat-tab>
             <mat-tab label="By Uploading CSV">
