--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -4,8 +4,10 @@
     <kt-portlet-body style="min-height: 79vh;">
         <div class="row kt-padding-t-20">
             <div class="col-12">
-                <label class="font-weight-bold text-color d-flex align-items-center">Upload Lending Parnters Banners</label>
-                <label  class="font-weight-500 text-gray d-flex align-items-center"> 600px X 300px with .jpg or .png</label>
+                <label class="font-weight-bold text-color d-flex align-items-center">Upload Lender Parnters
+                    Banners</label>
+                <label class="font-weight-500 text-gray d-flex align-items-center"> 600px X 300px with .jpg or
+                    .png</label>
             </div>
         </div>
         <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
