--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
@@ -8,12 +8,10 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="grossWeight"
-                            placeholder="10.50 grams">
-                        <mat-error *ngIf="controls.grossWeight.errors?.required && controls.grossWeight.invalid">
-                            Required Field
-                        </mat-error>
-                        <mat-error *ngIf="controls.grossWeight.errors?.min && controls.grossWeight.invalid">
-                            Required Field
+                            placeholder="10.50 grams"
+                            [class.isError]="controls.grossWeight.touched && controls.grossWeight.invalid">
+                        <mat-error *ngIf="controls.grossWeight.errors?.required && controls.grossWeight.touched">
+                            Required field
                         </mat-error>
                     </div>
                 </div>
@@ -24,22 +22,23 @@
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="netWeight" placeholder="8.50 grams"
                             [class.isError]="controls.netWeight.touched && controls.netWeight.invalid">
-                        <mat-error *ngIf="controls.grossWeight.errors?.required && controls.grossWeight.invalid">
-                            Required Field
-                        </mat-error>
-                        <mat-error *ngIf="controls.grossWeight.errors?.max && controls.grossWeight.invalid">
-                            Required Field
+                        <mat-error *ngIf="controls.netWeight.errors?.required && controls.netWeight.touched">
+                            Required field
                         </mat-error>
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
                     <div class="col-4 form-label">
-                        <label for="" class=" text-color">Deduction Weight</label>
+                        <label for="" class="mandatory text-color">Deduction Weight</label>
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="deductionWeight"
                             placeholder="2.00 grams"
                             [class.isError]="controls.deductionWeight.touched && controls.deductionWeight.invalid">
+                        <mat-error
+                            *ngIf="controls.deductionWeight.errors?.required && controls.deductionWeight.touched">
+                            Required field
+                        </mat-error>
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
