--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -1,7 +1,7 @@
 <!-- begin:: Header Topbar -->
 <div class="kt-header__topbar">
     <div class="row justify-content-center">
-        <div class="" *ngIf="showBackButton" (click)="goBack()">
+        <div class="align-self-center" *ngIf="showBackButton" (click)="goBack()">
             <img src="../../../../../assets//media/icons/arrow_back.svg" class="kt-pointer">
         </div>
         <div class="col align-self-center">
