--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -82,3 +82,10 @@
         </div>
     </form>
 </div>
+<div class="row py-3" *ngIf="!disable">
+    <div class="col-12">
+        <kt-button [value]="'Apply'" [type]="'button'" (click)=" applyForm()"></kt-button>
+        <span class="kt-padding-10"></span>
+        <kt-button [value]="'Cancel'" [type]="'reset'" (click)="cancel()"></kt-button>
+    </div>
+</div>
