--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class=" kt-margin-t-20 kt-margin-b-20">
+        <!-- <div class=" kt-margin-t-20 kt-margin-b-20">
             <div class="row">
                 <div class="col">
                     <div class="offset-4 img-container" *ngIf="bankForm.controls.passbookProof.value.length == 0">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="col-6">
         <div class="row ">
