--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/user-details/user-details.component.html
@@ -6,7 +6,7 @@
                 <form action="" [formGroup]="userDetails">
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Merchant Name </label>
+                            <label class=" mandatory font-weight-500 text-color">Merchant Name </label>
                         </div>
                         <div class="col-8">
                             <input type="text" formControlName="merchantName" class="form-control"
@@ -24,7 +24,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Full Name </label>
+                            <label class=" mandatory font-weight-500 text-color">Full Name </label>
                         </div>
                         <div class="col-8">
                             <div class="row">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Email </label>
+                            <label class=" mandatory font-weight-500 text-color">Email </label>
                         </div>
                         <div class="col-8">
                             <input type="text" class="form-control" formControlName="email"
@@ -73,7 +73,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Mobile Number </label>
+                            <label class=" mandatory font-weight-500 text-color">Mobile Number </label>
                         </div>
                         <div class="col-8">
                             <input type="text" class="form-control" formControlName="mobileNumber"
@@ -93,7 +93,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">State</label>
+                            <label class=" mandatory font-weight-500 text-color">State</label>
                         </div>
                         <div class="col-8">
                             <select class="form-control" formControlName="stateId"
@@ -111,7 +111,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Select City</label>
+                            <label class=" mandatory font-weight-500 text-color">Select City</label>
                         </div>
                         <div class="col-8">
                             <select class="form-control" formControlName="cityId"
@@ -127,7 +127,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Pin Code</label>
+                            <label class=" mandatory font-weight-500 text-color">Pin Code</label>
                         </div>
                         <div class="col-8">
                             <input type="text" class="form-control" formControlName="pinCode" placeholder="112345"
@@ -142,7 +142,7 @@
                     </div>
                     <div class="row kt-margin-t-15" *ngIf="url == 'add-merchant'">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Merchant Initial</label>
+                            <label class=" mandatory font-weight-500 text-color">Merchant Initial</label>
                         </div>
                         <div class="col-8">
                             <input type="text" placeholder="e.g AU" class="form-control" formControlName="initial" maxlength="2" ktAlphabets
